[package]
name = "catsay"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
colored = { version = "2.0" }
failure = { version = "0.1.8" }
exitfailure = { version = "0.5.1" }
assert_cmd = { version = "2.0.4" }
predicates = { version = "2.1.1" }